# brushless-motor-controller

./: .gitignore  CMakeLists.txt  SpaceVectorPWMExample  main.cpp  plotter.py  space_vector_pwm.cpp  space_vector_pwm.h
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Brushless_motor_driver.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Brushless_motor_driver/: .cproject  .mxproject  .project  Brushless_motor_driver.ioc
Brushless_motor_driver/Core/Inc/: bldc.h  cordic_driver.h  curr_sens.h  data_types.h  filter.h  hall_encoder.h  main.h  main_bridge.h  math_utils.h  space_vector_pwm.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  svm_gen.h
Brushless_motor_driver/Core/Src/: cordic_driver.cpp  curr_sens.cpp  data_types.cpp  driver.cpp  filter.cpp  hall_encoder.cpp  main.c  main_bridge.cpp  math_utils.cpp  space_vector_pwm.cpp  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Brushless_motor_driver/Debug/: Brushless_motor_driver.elf  Brushless_motor_driver.list  Brushless_motor_driver.map  makefile  objects.list  sources.mk
Brushless_motor_driver/Debug/Core/Src/: bldc.d  cordic_driver.cyclo  cordic_driver.d  cordic_driver.su  curr_sens.cyclo  curr_sens.d  curr_sens.su  data_types.cyclo  data_types.d  data_types.su  driver.cyclo  driver.d  driver.su  filter.cyclo  filter.d  filter.su  hall_encoder.cyclo  main.d  (+21 more)
(+42 files in other folders)
